@@ -64,12 +64,12 @@ DRLM are compatible with previous versions, unless otherwise noted.
 
 The references pointing to fix #nr or issue #nr refer to our issues tracker
 
-DRLM Version 2.1.3 (March 2017) - Release Notes
+DRLM Version 2.1.3 (May 2017) - Release Notes
 -----------------------------------------------
 
   * Update Debian 6 installclient dependencies. (issue #57)
   * Now "apt-get update" is done before "apt-get install" in instclient debian workflow.
-
+  * Set global UMASK value for all DRLM creating files durting execution.
 
 DRLM Version 2.1.2 (March 2017) - Release Notes
 -----------------------------------------------
